--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <h2 class="w3-center">Cafe-bar</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="food1.jpg" style="width:100%">
-  <img class="mySlides" src="food2.jpg" style="width:100%">
-  <img class="mySlides" src="food3.jpg" style="width:100%">
+  <img class="mySlides" src="/tkachukk/food1.jpg" style="width:100%">
+  <img class="mySlides" src="/tkachukk/food2.jpg" style="width:100%">
+  <img class="mySlides" src="/tkachukk/food3.jpg" style="width:100%">
 </div>
 
 <div class="w3-container w3-center">
