--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <body>
 
+
+
+<div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button">Home</a>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+</div>
+
+ <!-- текстовий блок -->
 <h2 class="w3-center">Cafe-bar</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
@@ -25,24 +34,25 @@
 
 <div class="w3-container w3-center">
   <h2> cafe "Merci"</h2>
-  <img src="kyivfood.jpg"  style="width:80%;max-width:320px">
-  <p>Завітавши до кафе “Merci”. Ви маєте можливість посмакувати крафтового пива ,відчути атмосферу вуличної їжі та джазу.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Це ідеальне місце для зустрічі з друзями.</p>
+  <img src="/tkachukk/kyivfood.jpg"  style="width:80%;max-width:320px">
+  <p class="w3-serif">Завітавши до кафе “Merci”. Ви маєте можливість посмакувати крафтового пива ,відчути атмосферу вуличної їжі та джазу.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Це ідеальне місце для зустрічі з друзями.</p>
 </div>
 
 <div class="w3-container w3-center">
   <h2>Our team</h2>
-  <img src="person.jpg" style="width:80%;max-width:320px">
-  <p>Наша команда- це основа всього.Без їхньої плідної роботи не було б самого закладу.Наші професіонали подолали тяжкий шлях, щоб зараз дати вам можливість посмакувати наші фірмові страви. </p>
+  <img src="/tkachukk/person.jpg" style="width:80%;max-width:320px">
+  <p class="w3-serif">Наша команда- це основа всього.Без їхньої плідної роботи не було б самого закладу.Наші професіонали подолали тяжкий шлях, щоб зараз дати вам можливість посмакувати наші фірмові страви. </p>
 </div>
    
 
 
-<h2>Lunch menu</h2>
-<p> На цьому тижні ви можете посмакувати такі страви </p>
+<h2 class="w3-center">Lunch menu</h2>
+
+<p class="w3-serif"> На цьому тижні ви можете посмакувати такі страви </p>
 
 <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-black w3-left-align">бізнес-меню №1/ 125 гривень</button>
 <div id="Demo1" class="w3-hide w3-container">
-    <p>Салат зі свіжих овочів зі сметаною – Суп овочевий з броколі – Печінка  тушкована з грибами та картопляне пюре – Травяний напій – Десерт у подарунок</p>
+    <p class="w3-serif">Салат зі свіжих овочів зі сметаною – Суп овочевий з броколі – Печінка  тушкована з грибами та картопляне пюре – Травяний напій – Десерт у подарунок</p>
 
 </div>
 
@@ -50,29 +60,12 @@
 
 <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-black w3-left-align">бізнес-ланч №2/ 160 гривень</button>
 <div id="Demo2" class="w3-hide w3-container">
-    <p>Салат овочевий з молодою капустою – Суп з фрикадельками – Риба морська смажена в яєчному клярі з рисом та кукурудзою – Напій з каркаде – Десерт у подарунок</p>
+    <p class="w3-serif">Салат овочевий з молодою капустою – Суп з фрикадельками – Риба морська смажена в яєчному клярі з рисом та кукурудзою – Напій з каркаде – Десерт у подарунок</p>
 </div>
-
-
-<button onclick="myFunction('Demo3')" class="w3-button w3-block w3-black w3-left-align">бізнес-меню №1/ 125 гривень</button>
-<div id="Demo1" class="w3-hide w3-container">
-    <p>Салат зі свіжих овочів зі сметаною – Суп овочевий з броколі – Печінка  тушкована з грибами та картопляне пюре – Травяний напій – Десерт у подарунок</p>
-
-</div>
-
-
-
-<button onclick="myFunction('Demo4')" class="w3-button w3-block w3-black w3-left-align">бізнес-ланч №2/ 160 гривень</button>
-<div id="Demo2" class="w3-hide w3-container">
-    <p>Салат овочевий з молодою капустою – Суп з фрикадельками – Риба морська смажена в яєчному клярі з рисом та кукурудзою – Напій з каркаде – Десерт у подарунок</p>
-</div>
-
-</div>
-
 
 <!-- другій акордион -->
     
-<div class="w3-container">
+<!-- <div class="w3-container">
 <h2>Our menu</h2>
 <p>Тут ви можете ознайомитись з нашими смаколиками</p>
 
@@ -82,8 +75,10 @@
 <div id="Demo1" class="w3-hide">
   <a class="w3-button w3-block w3-black  w3-left-align" href="#"> Дорада на грилі 
   - Курячі Сердечка з білими грибами та міні-деруни</a>
+
   <a class="w3-button w3-block w3-black  w3-left-align" href="#"> Реберця за фірмовим рецептом 
   -Ґзик телячий на грилі, банош та соус з блакитногг сиру</a>
+
   <a class="w3-button w3-block w3-black  w3-left-align" href="#">Бутерброд з тюлькою
    - Сирні смажені палички
    - Курячі крильця
@@ -94,35 +89,60 @@
 </div>
 
 
-
-
+<-- карточки --> 
+<p class="w3-serif">
 <div class="w3-container">
-  <h2>Our menu</h2>
+
+  <h2 class="w3-center">Our menu</h2>
 
   <div class="w3-card-4" style="width:50%">
-    <img src="vine.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="/tkachukk/vine.jpg" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
-      <p>ЗАКУСКА ДО ВИНА</p>
+      <p class="w3-serif">Закуска до вина</p>
     </div>
   </div>
 
 
  <div class="w3-card-4" style="width:50%">
-    <img src="vine.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="/tkachukk/krychenuk.jpg" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
-      <p>ЗАКУСКА ДО ВИНА</p>
+      <p class="w3-serif">Крученики із баклажанів</p>
+    </div>
+  </div>
+
+<div class="w3-card-4" style="width:50%">
+    <img src="/tkachukk/met.jpg" alt="Страви до пива" style="width:100%">
+    <div class="w3-container w3-center">
+      <p class="w3-serif">Гостре в'ялене м'ясо</p>
     </div>
   </div>
 
 
+<div class="w3-card-4" style="width:50%">
+    <img src="/tkachukk/palochka.jpg" alt="Страви до пива" style="width:100%">
+    <div class="w3-container w3-center">
+      <p class="w3-serif">Сирні смажені палички</p>
+    </div>
+  </div>
 
 
 </div>
 
 
 
+<!-- фотогалерея -->
 
+<div class="w3-container">
+ <h2 class="w3-center">STEAK</h2>
+  <p class="w3-serif"> <strong>Новинки:</strong> можна буде скуштувати вже цієї весни </p>
 
+  <p class="w3-serif"><strong>СТЕЙК РІБАЙ:</p>
+  <img src="/tkachukk/steuk2.jpg"  style="width:150px">
+  <p class="w3-serif"><strong>Ті-Боун стейк:</p>
+  <img src="/tkachukk/steuk.jpg"  style="width:150px">
+  <p class="w3-serif"><strong>Стріплойн:</p>
+  <img src="/tkachukk/steuk3.jpg" style="width:150px">
+</div>
 
 
 
@@ -196,6 +216,40 @@ function carousel() {
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
