--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h2 class="w3-center">Our menu</h2>
 
   <div class="w3-card-4" style="width:50%">
-    <img src="/tkachukk/vine.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="/tkachukk/vine2.png" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Закуска до вина</p>
     </div>
@@ -104,7 +104,7 @@
 
 
  <div class="w3-card-4" style="width:50%">
-    <img src="/tkachukk/krychenuk.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="/tkachukk/krychenuk2.png" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Крученики із баклажанів</p>
     </div>
