--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ body {font-family: "Lato", sans-serif}
 
   <!-- слайд шоу:покращи якість фото-->
   <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/old.jpg" style="width:100%">
+    <img src="old.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32  w3-hide-large">
         
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/beer1.jpg" style="width:100%">
+    <img src="beer1.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
  
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/kiss.jpg" style="width:100%">
+    <img src="kiss.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
      
     </div>
@@ -172,7 +172,7 @@ div.desc {
 
 
 <div class="w3-card-4" style="width:17%">
-    <img src="tkachukk/palochka.jpg" alt="Страви до пива" style="width:100%">
+    <img src="palochka.jpg" alt="Страви до пива" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Сирні смажені палички</p>
     </div>
@@ -189,27 +189,31 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="steuk3.jpg">
-    <img src="tkachukk/steuk3.jpg" width="600" height="400">
+    <img src="steuk3.jpg" width="600" height="400">
   </a>
    <div class="w3-container w3-center">
    <div class="w3-serif">ТІ-БОУН СТЕЙК</div></div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="tkachukk/img_forest.jpg">
-   <img src="tkachukk/steuk.jpg"  width="600" height="400">
+  <a target="_blank" href="img_forest.jpg">
+    <img src="steuk.jpg"  width="600" height="400">
   </a>
    <div class="w3-container w3-center">
-  <div class="w3-serif">СТЕЙК РІБАЙ</div> </div>
-</div>
+      <div class="w3-serif">СТЕЙК РІБАЙ
+      </div> 
+  </div>
+    </div>
 
 <div class="gallery">
   <a target="_blank" href="steuk2.jpg">
     <img src="steuk2.jpg"   width="600" height="400">
   </a>  
     <div class="w3-container w3-center">
-  <div class="w3-serif">СТРІПЛОЙН</div> </div>
-</div>
+        <div class="w3-serif">СТРІПЛОЙН
+        </div> 
+     </div>
+  </div>
 </div>
 </div>
 
@@ -234,7 +238,7 @@ function myFunction(id) {
 </script>
 
   
-</div>
+
 
 <!-- Image of location/map -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
