--- a/index.html
+++ b/index.html
@@ -184,38 +184,40 @@ div.desc {
 <!-- foto steak -->
 
 <div class="w3-container">
- <h2 class="w3-center">STEAK</h2>
-  <p class="w3-serif"> <strong>Новинки:</strong> можна буде скуштувати вже цієї весни </p>
+      <h2 class="w3-center">STEAK</h2>
+      <p class="w3-serif"> <strong>Новинки:</strong> можна буде скуштувати вже цієї весни </p>
 
-<div class="gallery">
-  <a target="_blank" href="steuk3.jpg">
-    <img src="steuk3.jpg" width="600" height="400">
-  </a>
-   <div class="w3-container w3-center">
-   <div class="w3-serif">ТІ-БОУН СТЕЙК</div></div>
-</div>
+      <div class="gallery">
+         <a target="_blank" href="steuk3.jpg">
+           <img src="steuk3.jpg" width="600" height="400">
+         </a>
+         <div class="w3-container w3-center">
+            <div class="w3-serif">ТІ-БОУН СТЕЙК
+            </div>
+        </div>
+      </div>
 
-<div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="steuk.jpg"  width="600" height="400">
-  </a>
-   <div class="w3-container w3-center">
-      <div class="w3-serif">СТЕЙК РІБАЙ
-      </div> 
-  </div>
-    </div>
+      <div class="gallery">
+       <a target="_blank" href="img_forest.jpg">
+        <img src="steuk.jpg"  width="600" height="400">
+       </a>
+             <div class="w3-container w3-center">
+                  <div class="w3-serif">СТЕЙК РІБАЙ
+                 </div> 
+             </div>
+      </div>
 
-<div class="gallery">
-  <a target="_blank" href="steuk2.jpg">
-    <img src="steuk2.jpg"   width="600" height="400">
-  </a>  
-    <div class="w3-container w3-center">
-        <div class="w3-serif">СТРІПЛОЙН
-        </div> 
+      <div class="gallery">
+          <a target="_blank" href="steuk2.jpg">
+           <img src="steuk2.jpg"   width="600" height="400">
+           </a>  
+           <div class="w3-container w3-center">
+               <div class="w3-serif">СТРІПЛОЙН
+               </div> 
+             </div>
      </div>
-  </div>
 </div>
-</div>
+
 
 
 
