--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ body {font-family: "Lato", sans-serif}
 
   <!-- слайд шоу:покращи якість фото-->
   <div class="mySlides w3-display-container w3-center">
-    <img src="old.jpg" style="width:100%">
+    <img src="tkachukk/old.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32  w3-hide-large">
         
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="beer1.jpg" style="width:100%">
+    <img src="tkachukk/beer1.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
  
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="kiss.jpg" style="width:100%">
+    <img src="tkachukk/kiss.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
      
     </div>
@@ -90,9 +90,9 @@ function carousel() {
 
 <div class="w3-container w3-center">
   <h2>Our team</h2>
-  <img src="i7.jpg"style="width:80%;max-width:230px">
-  <img src="i.jpg" style="width:80%;max-width:200px">
-  <img src="i3.jpg" style="width:80%;max-width:210px">
+  <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
+  <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
+  <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
   <p class="w3-serif">Ну що, народ, хто не на роботі,підтягуйтесь в паб, вже можна))
 Так шо чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт? Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте </p>
 </div>
@@ -149,7 +149,7 @@ div.desc {
 
 
   <div class="w3-card-4" style="width:17%">
-    <img src="vine.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="tkachukk/vine.jpg" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Закуска до вина</p>
     </div>
@@ -157,14 +157,14 @@ div.desc {
 
 
  <div class="w3-card-4" style="width:17%">
-    <img src="krychenuk.jpg" alt="Холодні закуски" style="width:100%">
+    <img src="tkachukk/krychenuk.jpg" alt="Холодні закуски" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Крученики із баклажанів</p>
     </div>
   </div>
 
 <div class="w3-card-4" style="width:17%">
-    <img src="met2.jpg" alt="Страви до пива" style="width:100%">
+    <img src="tkachukk/met2.jpg" alt="Страви до пива" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Гостре в'ялене м'ясо</p>
     </div>
@@ -172,7 +172,7 @@ div.desc {
 
 
 <div class="w3-card-4" style="width:17%">
-    <img src="palochka.jpg" alt="Страви до пива" style="width:100%">
+    <img src="tkachukk/palochka.jpg" alt="Страви до пива" style="width:100%">
     <div class="w3-container w3-center">
       <p class="w3-serif">Сирні смажені палички</p>
     </div>
@@ -189,7 +189,7 @@ div.desc {
 
       <div class="gallery">
          <a target="_blank" href="steuk3.jpg">
-           <img src="steuk3.jpg" width="600" height="400">
+           <img src="tkachukk/steuk3.jpg" width="600" height="400">
          </a>
          <div class="w3-container w3-center">
             <div class="w3-serif">ТІ-БОУН СТЕЙК
@@ -199,7 +199,7 @@ div.desc {
 
       <div class="gallery">
        <a target="_blank" href="img_forest.jpg">
-        <img src="steuk.jpg"  width="600" height="400">
+        <img src="tkachukk/steuk.jpg"  width="600" height="400">
        </a>
              <div class="w3-container w3-center">
                   <div class="w3-serif">СТЕЙК РІБАЙ
@@ -209,7 +209,7 @@ div.desc {
 
       <div class="gallery">
           <a target="_blank" href="steuk2.jpg">
-           <img src="steuk2.jpg"   width="600" height="400">
+           <img src="tkachukk/steuk2.jpg"   width="600" height="400">
            </a>  
            <div class="w3-container w3-center">
                <div class="w3-serif">СТРІПЛОЙН
