--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ div.desc {
 
 
 <script>
-function myFunction(id) {
+function myFunction1(id) {
   var x = document.getElementById(id);
   if (x.className.indexOf("w3-show") == -1) {
     x.className += " w3-show";
@@ -246,7 +246,7 @@ function myFunction(id) {
 <!-- Image of location/map -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
-<!-- Footer -->
+<!-- Ссилка на инсту -->
 <style>
 a:link {
   text-decoration: none;
