--- a/index.html
+++ b/index.html
@@ -268,11 +268,10 @@ a:active {
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <p class="w3-medium"> <a href="https://www.instagram.com/pub_oldskull/" href="default.asp"  target="_blank"> our instagram </a></p>
 </footer>
-
+  
+  
+<!-- найти тіло до цього скріпта -->
 <script>
-
-
-
 var myIndex = 0;
 carousel();
 
