--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <span class="w3-tag w3-xlarge">Open from 10am to 12pm</span>
   </div>
   <div class="w3-display-middle w3-center">
+    <img src="beer1.jpg" class="w3-image w3-greyscale">
     <span class="w3-text-white w3-hide-small" style="font-size:100px">thin<br>CRUST PIZZA</span>
     <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:60px"><b>thin<br>CRUST PIZZA</b></span>
     <p><a href="#menu" class="w3-button w3-xxlarge w3-black">тут ти можеш переглянути меню</a></p>
@@ -146,7 +147,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   </div>
 </div>
 
-<!-- Image of location/map -->
+<!-- фотки локації/мапа -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
 
 <!-- Контактні дані(перероби на концерти літом2021) -->
