--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <!-- Навігація-->
 <div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
-    <a href="#" class="w3-bar-item w3-button">HOME</a>
-    <a href="#menu" class="w3-bar-item w3-button">MENU</a>
-    <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-    <a href="#myMap" class="w3-bar-item w3-button">CONTACT</a>
+    <a href="#" class="w3-bar-item w3-button">Home</a>
+    <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+    <a href="#about" class="w3-bar-item w3-button">Our team</a>
+    <a href="#myMap" class="w3-bar-item w3-button">Concert 2021</a>
   </div>
 </div>
   
