--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@ function carousel() {
       <p class="w3-text-grey">Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
     </div>
 <!-- 2відділ -->
-    <div id="Pasta" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Lasagna</b> <span class="w3-tag w3-grey w3-round">Popular</span> <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
+    <div id="Гриль меню" class="w3-container menu w3-padding-32 w3-white">
+      <h1><b>Шашлик курячий/з ошийка</b> <span class="w3-tag w3-grey w3-round">Popular</span> <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
       <p class="w3-text-grey">Special sauce, mozzarella, parmesan, ground beef</p>
       <hr>
    
-      <h1><b>Ravioli</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$14.50</span></h1>
+      <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">70 грн</span></h1>
       <p class="w3-text-grey">Ravioli filled with cheese</p>
       <hr>
       
-      <h1><b>Spaghetti Classica</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$11.00</span></h1>
+      <h1><b>Ковбаски телячі з сиром,з картоплею і гірчицею</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 грн</span></h1>
       <p class="w3-text-grey">Fresh tomatoes, onions, ground beef</p>
       <hr>
 
