--- a/index.html
+++ b/index.html
@@ -127,15 +127,17 @@ function carousel() {
     </div>
 <!-- 2відділ -->
     <div id="Гриль меню" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Шашлик курячий/з ошийка</b> <span class="w3-tag w3-grey w3-round">Popular</span> <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
+      <h1><b>Шашлик курячий/з ошийка</b> <span class="w3-tag w3-grey w3-round">Popular</span> 
+        <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
       <p class="w3-text-grey">Special sauce, mozzarella, parmesan, ground beef</p>
       <hr>
    
-      <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">70 грн</span></h1>
+      <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">70.00</span></h1>
       <p class="w3-text-grey">Ravioli filled with cheese</p>
       <hr>
       
-      <h1><b>Ковбаски телячі з сиром,з картоплею і гірчицею</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 грн</span></h1>
+      <h1><b>Ковбаски телячі з сиром,з картоплею і гірчицею</b> 
+        <span class="w3-right w3-tag w3-dark-grey w3-round">100.00</span></h1>
       <p class="w3-text-grey">Fresh tomatoes, onions, ground beef</p>
       <hr>
 
