--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ function carousel() {
       <p class="w3-text-grey">Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
     </div>
 <!-- 2відділ -->
-    <div id="Гриль меню" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Шашлик курячий/з ошийка</b> <span class="w3-tag w3-grey w3-round">Popular</span> 
+    <div id="Grill menu" class="w3-container menu w3-padding-32 w3-white">
+      <h1><b>Chicken skewers</b> <span class="w3-tag w3-grey w3-round">Popular</span> 
         <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
       <p class="w3-text-grey">Special sauce, mozzarella, parmesan, ground beef</p>
       <hr>
