--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ function carousel() {
       <a href="javascript:void(0)" onclick="openMenu(event, 'Pizza');" id="myLink">
         <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Pizza</div>
       </a>
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');">
-        <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Salads</div>
+      <a href="javascript:void(0)" onclick="openMenu(event, 'Grill menu');">
+        <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Grill menu</div>
       </a>
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Starter');">
-        <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Starter</div>
+      <a href="javascript:void(0)" onclick="openMenu(event, 'Salads');">
+        <div class="w3-col s4 tablink w3-padding-large w3-hover-red">Salads</div>
       </a>
     </div>
 <!-- назва кожного відділу -->
@@ -146,7 +146,7 @@ function carousel() {
     </div>
 
 
-    <div id="Starter" class="w3-container menu w3-padding-32 w3-white">
+    <div id="Salads" class="w3-container menu w3-padding-32 w3-white">
       <h1><b>Today's Soup</b> <span class="w3-tag w3-grey w3-round">Seasonal</span><span class="w3-right w3-tag w3-dark-grey w3-round">$5.50</span></h1>
       <p class="w3-text-grey">Ask the waiter</p>
       <hr>
