--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </header>
  -->
   
-   <!-- слайд шоу:покращи якість фото-->
+   <!-- слайд шоу:-->
   <div class="mySlides w3-display-container w3-center">
     <img src="tkachukk/old.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32  w3-hide-large">
@@ -102,7 +102,7 @@ function carousel() {
     </div>
 <!-- назва кожного відділу -->
     <div id="Pizza" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Margherita</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$12.50</span></h1>
+      <h1><b>Margherita</b> <span class="w3-right w3-tag w3-dark-grey w3-round">125.00</span></h1>
       <p class="w3-text-grey">Fresh tomatoes, fresh mozzarella, fresh basil</p>
       <hr>
    
@@ -127,13 +127,13 @@ function carousel() {
     </div>
 <!-- 2відділ -->
     <div id="Grill menu" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Chicken skewers</b> <span class="w3-tag w3-grey w3-round">Popular</span> 
-        <span class="w3-right w3-tag w3-dark-grey w3-round">$13.50</span></h1>
-      <p class="w3-text-grey">Special sauce, mozzarella, parmesan, ground beef</p>
+      <h1><b>Курячий шашлик</b> <span class="w3-tag w3-grey w3-round">ТОП-1</span> 
+        <span class="w3-right w3-tag w3-dark-grey w3-round">70 grn</span></h1>
+      <p class="w3-text-grey">Порція:100g</p>
       <hr>
    
-      <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">70.00</span></h1>
-      <p class="w3-text-grey">Ravioli filled with cheese</p>
+      <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
+      <p class="w3-text-grey">Новинки:Ті-боун стейк;стейк Рібай;Стріплойн</p>
       <hr>
       
       <h1><b>Ковбаски телячі з сиром,з картоплею і гірчицею</b> 
