--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ function carousel() {
 <!-- 2відділ -->
     <div id="Grill menu" class="w3-container menu w3-padding-32 w3-white">
       <h1><b>Курячий шашлик</b> <span class="w3-tag w3-grey w3-round">ТОП-1</span> 
-        <span class="w3-right w3-tag w3-dark-grey w3-round">70 grn</span></h1>
-      <p class="w3-text-grey">Порція:100g</p>
+        <span class="w3-right w3-tag w3-dark-grey w3-round">130 grn</span></h1>
+      <p class="w3-text-grey">порція:150g</p>
       <hr>
    
       <h1><b>Стейк</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
@@ -137,12 +137,12 @@ function carousel() {
       <hr>
       
       <h1><b>Ковбаски телячі з сиром,з картоплею і гірчицею</b> 
-        <span class="w3-right w3-tag w3-dark-grey w3-round">100.00</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, onions, ground beef</p>
+        <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
+      <p class="w3-text-grey">порція:100g</p>
       <hr>
 
-      <h1><b>Seafood pasta</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$25.50</span></h1>
-      <p class="w3-text-grey">Salmon, shrimp, lobster, garlic</p>
+      <h1><b>Качині ковбаски з картоплею і гірчицею</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
+      <p class="w3-text-grey">порція:100g</p>
     </div>
 
 
