--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@ function carousel() {
     </div>
 <!-- назва кожного відділу -->
     <div id="Pizza" class="w3-container menu w3-padding-32 w3-white">
-      <h1><b>Margherita</b> <span class="w3-right w3-tag w3-dark-grey w3-round">125.00</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, fresh mozzarella, fresh basil</p>
+      <h1><b>Маргарита</b> <span class="w3-right w3-tag w3-dark-grey w3-round">125 grn</span></h1>
+      <p class="w3-text-grey">моцарелла,помідори,базилік</p>
       <hr>
    
-      <h1><b>Formaggio</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.50</span></h1>
-      <p class="w3-text-grey">Four cheeses (mozzarella, parmesan, pecorino, jarlsberg)</p>
+      <h1><b>Формаджо</b> <span class="w3-right w3-tag w3-dark-grey w3-round">130 grn</span></h1>
+      <p class="w3-text-grey">3 вида сиру(моцарелла,пармезан,пекорино).30см</p>
       <hr>
       
-      <h1><b>Chicken</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$17.00</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, mozzarella, chicken, onions</p>
+      <h1><b>Цезар</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
+      <p class="w3-text-grey">соус цезар, моцарелла,курка,томати,салат ромен,пармезан.30 см</p>
       <hr>
 
-      <h1><b>Pineapple'o'clock</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$16.50</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, mozzarella, fresh pineapple, bacon, fresh basil</p>
+      <h1><b>Гавайська</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$16.50</span></h1>
+      <p class="w3-text-grey">соус томатний,моцарелла,ананас,кукурудза,курка.30 см</p>
       <hr>
 
-      <h1><b>Meat Town</b> <span class="w3-tag w3-red w3-round">Hot!</span><span class="w3-right w3-tag w3-dark-grey w3-round">$20.00</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, mozzarella, hot pepporoni, hot sausage, beef, chicken</p>
+      <h1><b>М'ясна</b> <span class="w3-tag w3-red w3-round">Hot!</span><span class="w3-right w3-tag w3-dark-grey w3-round">135 grn</span></h1>
+      <p class="w3-text-grey">Соус томатний,моцарелла, папероні,шинка,курка,бекон,томати,цибуля.30 см</p>
       <hr>
 
-      <h1><b>Parma</b> <span class="w3-tag w3-grey w3-round">New</span><span class="w3-right w3-tag w3-dark-grey w3-round">$21.50</span></h1>
+      <h1><b>Parma</b> <span class="w3-tag w3-grey w3-round">New</span><span class="w3-right w3-tag w3-dark-grey w3-round">120 grn</span></h1>
       <p class="w3-text-grey">Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
     </div>
 <!-- 2відділ -->
