--- a/index.html
+++ b/index.html
@@ -107,23 +107,20 @@ function carousel() {
       <hr>
    
       <h1><b>Формаджо</b> <span class="w3-right w3-tag w3-dark-grey w3-round">130 grn</span></h1>
-      <p class="w3-text-grey">3 вида сиру(моцарелла,пармезан,пекорино).30см</p>
+      <p class="w3-text-grey">3 вида сиру(моцарелла,пармезан,чедер).30см</p>
       <hr>
       
       <h1><b>Цезар</b> <span class="w3-right w3-tag w3-dark-grey w3-round">100 grn</span></h1>
       <p class="w3-text-grey">соус цезар, моцарелла,курка,томати,салат ромен,пармезан.30 см</p>
       <hr>
 
-      <h1><b>Гавайська</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$16.50</span></h1>
+      <h1><b>Гавайська</b> <span class="w3-right w3-tag w3-dark-grey w3-round">125 grn</span></h1>
       <p class="w3-text-grey">соус томатний,моцарелла,ананас,кукурудза,курка.30 см</p>
       <hr>
 
       <h1><b>М'ясна</b> <span class="w3-tag w3-red w3-round">Hot!</span><span class="w3-right w3-tag w3-dark-grey w3-round">135 grn</span></h1>
       <p class="w3-text-grey">Соус томатний,моцарелла, папероні,шинка,курка,бекон,томати,цибуля.30 см</p>
-      <hr>
-
-      <h1><b>Parma</b> <span class="w3-tag w3-grey w3-round">New</span><span class="w3-right w3-tag w3-dark-grey w3-round">120 grn</span></h1>
-      <p class="w3-text-grey">Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
+      
     </div>
 <!-- 2відділ -->
     <div id="Grill menu" class="w3-container menu w3-padding-32 w3-white">
