--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function carousel() {
     <div id="Salads" class="w3-container menu w3-padding-32 w3-white">
       <h1><b>Капрезе</b> <span class="w3-tag w3-grey w3-round"></span>
         <span class="w3-right w3-tag w3-dark-grey w3-round">50 grn</span></h1>
-      <p class="w3-text-grey">помідор, моцарелла, соус "Песто", базилік. 100g</p>
+      <p class="w3-text-grey">помідор, моцарелла, соус "Песто", базилік.100g</p>
       <hr>
    
       <h1><b>Грецький</b> <span class="w3-right w3-tag w3-dark-grey w3-round">90 grn</span></h1>
@@ -163,10 +163,20 @@ function carousel() {
 
 <!-- текстовий блок -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
-  <div class="w3-content">
-    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">About</h1>
-    <p>The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p><strong>The Chef?</strong> Mr. Italiano himself<img src="/w3images/chef.jpg" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
+   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">Паб "Oldskull"</h2>
+    <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
+</i></p>
+    <p class="w3-justify">
+      Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні. Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull. </p>
+
+</div>
+  
+<!--   <div class="w3-content">
+    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Трішки про наш паб та людей</h1>
+    <p>Любите провести час в шумній компанії? Поспілкуватися за келихом пива?
+      Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас)))</p> -->
+    <p><strong>Про нашу команду:</strong> Mr. Italiano himself<img src="/w3images/chef.jpg" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
     <p>We are proud of our interiors.</p>
     <img src="/w3images/onepage_restaurant.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
     <h1><b>Opening Hours</b></h1>
