--- a/index.html
+++ b/index.html
@@ -164,14 +164,12 @@ function carousel() {
 <!-- текстовий блок -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Паб "Oldskull"</h2>
+    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Трішки про наш паб та людей</h1>
     <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
 </i></p>
     <p class="w3-justify">
       Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні. Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull. </p>
-
 </div>
-  
 <!--   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Трішки про наш паб та людей</h1>
     <p>Любите провести час в шумній компанії? Поспілкуватися за келихом пива?
