--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ function carousel() {
 </div>
     <p><strong>Про нашу команду:</strong> 
       <div class="w3-container w3-center">
-  <h2>Our team</h2>
+  <p><strong>Про нашу команду:</strong> 
   <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
   <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
   <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
