--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ function carousel() {
 <!-- текстовий блок -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h1 class="w3-center w3-jumbo" style="margin-bottom:50px">Трішки про наш паб та людей</h1>
+    <h1 class="w3-center w3-serif" style="margin-bottom:50px" >Трішки про наш паб та людей</h1>
     <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
 </i></p>
     <p class="w3-justify">
