--- a/index.html
+++ b/index.html
@@ -174,9 +174,8 @@ function carousel() {
     <p class="w3-justify">
       Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні. Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull. </p>
 </div>
-    <p><strong>Про нашу команду:</strong> 
-      <div class="w3-container w3-center">
-  <p><strong>Про нашу команду:</strong> 
+     <div class="w3-container w3-center">
+       <h2><strong>Про нашу команду:</strong></h2>
   <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
   <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
   <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
