--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ function carousel() {
 <!-- текстовий блок -->
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h1 class="w3-center w3-serif" style="margin-bottom:50px" >Трішки про наш паб та людей</h1>
+    <h1 class="w3-center w3-jumbo" style="margin-bottom:50px" >Трішки про наш паб та людей</h1>
     <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
 </i></p>
     <p class="w3-justify">
@@ -179,16 +179,10 @@ function carousel() {
   <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
   <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
   <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
-  <p class="w3-serif">Ну що, народ, хто не на роботі,підтягуйтесь в паб, вже можна))
+  <p class="w3-jumbo">Ну що, народ, хто не на роботі,підтягуйтесь в паб, вже можна))
 Так шо чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт? Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте </p>
 </div>
-         
-      
-<!-- Mr. Italiano himself<img src="/w3images/chef.jpg" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
-    <p>We are proud of our interiors.</p>
-    <img src="/w3images/onepage_restaurant.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
-    <h1><b>Opening Hours</b></h1>
-     -->
+
    <h1><b>Ми працюємо:</b></h1>
     <div class="w3-row">
       <div class="w3-col s6">
