--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@ function carousel() {
     
   </div>
 </div>
+  
+  
 
 <!-- фотки локації/мапа -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
@@ -220,13 +222,16 @@ function carousel() {
   </div>
 </div>
 
-<!-- зроби посилання на інсту -->
-<footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<!--  посилання на інсту -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <p class="w3-medium"> <a href="https://www.instagram.com/pub_oldskull/" href="default.asp" 
+      target="_blank"> our instagram </a></p>
 </footer>
 
+
 <script>
-// Tabbed Menu
+// для меню
 function openMenu(evt, menuName) {
   var i, x, tablinks;
   x = document.getElementsByClassName("menu");
