--- a/index.html
+++ b/index.html
@@ -172,15 +172,17 @@ function carousel() {
     <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
 </i></p>
     <p class="w3-justify">
-      Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні. Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull. </p>
+      Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. 
+      У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні.
+      Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull.
+      Так що чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт?
+      Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте  </p>
 </div>
      <div class="w3-container w3-center">
        <h2><strong>Про нашу команду:</strong></h2>
   <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
   <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
   <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
-  <p class="w3-jumbo">Ну що, народ, хто не на роботі,підтягуйтесь в паб, вже можна))
-Так шо чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт? Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте </p>
 </div>
 
    <h1><b>Ми працюємо:</b></h1>
