--- a/index.html
+++ b/index.html
@@ -169,17 +169,18 @@ function carousel() {
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:50px" >Трішки про наш паб та людей</h1>
-    <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок? Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам точно до нас.
+    <p class="w3-opacity"><i>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок?
+      Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? 
 </i></p>
     <p class="w3-justify">
-      Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. 
+      Тоді вам точно до нас))) Завітавши до пабу “Oldskull”.Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. 
       У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні.
       Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull.
       Так що чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт?
       Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте  </p>
 </div>
      <div class="w3-container w3-center">
-       <h2><strong>Про нашу команду:</strong></h2>
+       <h2>Our team:</h2>
   <img src="tkachukk/i7.jpg"style="width:80%;max-width:230px">
   <img src="tkachukk/i.jpg" style="width:80%;max-width:200px">
   <img src="tkachukk/i3.jpg" style="width:80%;max-width:210px">
