--- a/index.html
+++ b/index.html
@@ -222,14 +222,17 @@ function carousel() {
   
 
 <!-- фотки локації/мапа -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+<img src="tkachukk/map2.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
 
-<!-- Контактні дані(перероби на концерти літом2021) -->
+<!-- концерти літо2021 -->
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
   <div class="w3-content">
-    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contact</h1>
-    <p>Find us at some address at some place or call us at 05050515-122330</p>
-    <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
+    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Концерти 2021</h1>
+    <p>За детальною інформацією звертайтесь за номером: 0996064182</p>
+         <p><span class="w3-tag">АНОНС!</span> guys, саме час бронювати квитки на наймасштабнішу подію в пам'яті Луцька "HOT_SUMMER-FEST"
+      Що ж вас там чекає? Десяток рок-груп "Друга ріка","Лікування кульбабками","Димна Суміш","Кожаный Олень" і тд.
+      Також зустрінуться пивовари всієї України і ви матимете змогу скуштувати будь-яке на смак пиво
+        </p>
     <p class="w3-xxlarge"><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
