--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ function carousel() {
   
 
 <!-- фотки локації/мапа -->
-<img src="tkachukk/map2.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+<img src="tkachukk/love.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
 
 <!-- концерти літо2021 -->
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
